# miner

./: CMakeLists.txt
.zed/: settings.json
include/: miner.h
src/: main.cpp  miner.cpp
